force-app/main/default/objects/Property_Valuation__c/Property_Valuation__c.object-meta.xml
<CustomObject>
    <label>Property Valuation</label>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>Property Valuation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Valuations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>