force-app/main/default/objects/Property_Valuation__c/fields/Additionnal_Commission_Condition__c.field-meta.xml
<CustomField>
    <fullName>Additionnal_Commission_Condition__c</fullName>
    <label>Additionnal Commission Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>