force-app/main/default/objects/Property_Valuation__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(ISBLANK(House_Building_Name__c),&quot;&quot;,House_Building_Name__c)
&amp; IF(ISBLANK(House_Building_Name__c),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK(Street__c),&quot;&quot;,Street__c)
&amp; IF(ISBLANK(Street__c),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK(Village__c),&quot;&quot;,Village__c)
&amp; IF(ISBLANK(Village__c),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( Are_Town__c ),&quot;&quot;,Are_Town__c )
&amp; IF(ISBLANK(Are_Town__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( City_County__c ),&quot;&quot;,City_County__c )
&amp; IF(ISBLANK(City_County__c ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK( Postcode__c  ),&quot;&quot;,Postcode__c  )
&amp; IF(ISBLANK(Postcode__c  ),&quot;&quot;,&quot;, &quot;)
&amp; IF(ISBLANK(Country__c ),&quot;&quot;,Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>