force-app/main/default/objects/Property_Valuation__c/fields/Address_of_Managing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Managing_Agent__c</fullName>
    <label>Address of Managing Agent</label>
    <type>TextArea</type>
</CustomField>