force-app/main/default/objects/Property_Valuation__c/fields/AddressV__c.field-meta.xml
<CustomField>
    <fullName>AddressV__c</fullName>
    <formula>Contact__r.MailingCity +&apos;,&apos;+  Contact__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>