force-app/main/default/objects/Property_Valuation__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Age</valueSetName>
    </valueSet>
</CustomField>