force-app/main/default/objects/Property_Valuation__c/fields/Agreement_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Weeks__c</fullName>
    <inlineHelpText>Add Number of weeks</inlineHelpText>
    <label>Agreement Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>