force-app/main/default/objects/Property_Valuation__c/fields/Annual_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Annual_Service_Charge__c</fullName>
    <label>Annual Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>