force-app/main/default/objects/Property_Valuation__c/fields/Annual_Value_on_tenancy__c.field-meta.xml
<CustomField>
    <fullName>Annual_Value_on_tenancy__c</fullName>
    <label>Annual Value on tenancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>