force-app/main/default/objects/Property_Valuation__c/fields/Apartment_House_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Apartment_House_Unit_Number__c</fullName>
    <label>Apartment / House / Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>