force-app/main/default/objects/Property_Valuation__c/fields/Are_There_Any_Shared_or_Communal_Areas__c.field-meta.xml
<CustomField>
    <fullName>Are_There_Any_Shared_or_Communal_Areas__c</fullName>
    <label>Are There Any Shared or Communal Areas?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>