force-app/main/default/objects/Property_Valuation__c/fields/Are_Town__c.field-meta.xml
<CustomField>
    <fullName>Are_Town__c</fullName>
    <inlineHelpText>e.g. Mayfair, Lymington, Kensington, Hammersmith, Finchley, Mole Valley, Edinburgh Central, Westminster North...</inlineHelpText>
    <label>Area / Town</label>
    <length>50</length>
    <type>Text</type>
</CustomField>