force-app/main/default/objects/Property_Valuation__c/fields/Are_You_Aware_Of_Impending_Increases__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Aware_Of_Impending_Increases__c</fullName>
    <label>Are You Aware Of Impending Increases?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>