force-app/main/default/objects/Property_Valuation__c/fields/Availability_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_From_Date__c</fullName>
    <label>Availability From Date</label>
    <type>Date</type>
</CustomField>