force-app/main/default/objects/Property_Valuation__c/fields/Balcony__c.field-meta.xml
<CustomField>
    <fullName>Balcony__c</fullName>
    <label>Balcony</label>
    <length>30</length>
    <type>Text</type>
</CustomField>