force-app/main/default/objects/Property_Valuation__c/fields/Bank_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Bank_Postcode__c</fullName>
    <label>Bank Postcode:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>