force-app/main/default/objects/Property_Valuation__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <inlineHelpText>Add Number Of Bathrooms</inlineHelpText>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>