force-app/main/default/objects/Property_Valuation__c/fields/Brochures_Fee__c.field-meta.xml
<CustomField>
    <fullName>Brochures_Fee__c</fullName>
    <label>Brochures Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>