force-app/main/default/objects/Property_Valuation__c/fields/Building_And_Fire_Regs_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Building_And_Fire_Regs_Compliance__c</fullName>
    <inlineHelpText>Does your property comply with building and fire regulations?</inlineHelpText>
    <label>Building And Fire Regs Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>