force-app/main/default/objects/Property_Valuation__c/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CIF</label>
    <referenceTo>CIF__c</referenceTo>
    <relationshipLabel>Property Valuations</relationshipLabel>
    <relationshipName>Property_Valuations</relationshipName>
    <type>Lookup</type>
</CustomField>