force-app/main/default/objects/Property_Valuation__c/fields/City_County__c.field-meta.xml
<CustomField>
    <fullName>City_County__c</fullName>
    <inlineHelpText>e.g. Hampshire, Sawbridgeworth, London, Battle, Edinburgh, Dorking</inlineHelpText>
    <label>City / County</label>
    <length>250</length>
    <type>Text</type>
</CustomField>