force-app/main/default/objects/Property_Valuation__c/fields/co_owner__c.field-meta.xml
<CustomField>
    <fullName>co_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Internal Agent</inlineHelpText>
    <label>Co-owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Property_Valuations</relationshipName>
    <type>Lookup</type>
</CustomField>