force-app/main/default/objects/Property_Valuation__c/fields/Comapny_Address__c.field-meta.xml
<CustomField>
    <fullName>Comapny_Address__c</fullName>
    <label>Comapny Address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>