force-app/main/default/objects/Property_Valuation__c/fields/Comapny_Name__c.field-meta.xml
<CustomField>
    <fullName>Comapny_Name__c</fullName>
    <label>Comapny Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>