force-app/main/default/objects/Property_Valuation__c/fields/Comapny_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Comapny_Reg_No__c</fullName>
    <label>Comapny Reg.No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>