force-app/main/default/objects/Property_Valuation__c/fields/Commercial_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Amenities__c</fullName>
    <label>Commercial Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commercial_Amenities</valueSetName>
    </valueSet>
</CustomField>