force-app/main/default/objects/Property_Valuation__c/fields/Commission_Amount_Ex_VAT__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_Ex_VAT__c</fullName>
    <formula>Listing_Price__c *  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Amount Ex VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>