force-app/main/default/objects/Property_Valuation__c/fields/Community_facilities_features__c.field-meta.xml
<CustomField>
    <fullName>Community_facilities_features__c</fullName>
    <label>Community facilities &amp; features</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>