force-app/main/default/objects/Property_Valuation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Property Owner / Landlord</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Valuations (Primary Property Owner)</relationshipLabel>
    <relationshipName>Market_Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>