force-app/main/default/objects/Property_Valuation__c/fields/Content_Creation_Updated__c.field-meta.xml
<CustomField>
    <fullName>Content_Creation_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Creation Updated</label>
    <type>Checkbox</type>
</CustomField>