force-app/main/default/objects/Property_Valuation__c/fields/Created_Date_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time_Formula__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Time Formula</label>
    <type>DateTime</type>
</CustomField>