force-app/main/default/objects/Property_Valuation__c/fields/Current_ground_rent__c.field-meta.xml
<CustomField>
    <fullName>Current_ground_rent__c</fullName>
    <label>Current Ground Rent/Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>