force-app/main/default/objects/Property_Valuation__c/fields/Current_Property_Planning_Applications__c.field-meta.xml
<CustomField>
    <fullName>Current_Property_Planning_Applications__c</fullName>
    <inlineHelpText>Are there any current planning applications affecting the property?</inlineHelpText>
    <label>Current Property Planning Applications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>