force-app/main/default/objects/Property_Valuation__c/fields/Current_service_charge__c.field-meta.xml
<CustomField>
    <fullName>Current_service_charge__c</fullName>
    <label>Current Service Charge/Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>