force-app/main/default/objects/Property_Valuation__c/fields/Current_Service_Charge_Annum__c.field-meta.xml
<CustomField>
    <fullName>Current_Service_Charge_Annum__c</fullName>
    <label>Current Service Charge/Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>