force-app/main/default/objects/Property_Valuation__c/fields/Damp_Proofing_or_Timber_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Damp_Proofing_or_Timber_Treatment__c</fullName>
    <inlineHelpText>Has any damp proofing or timber treatment been carried out?</inlineHelpText>
    <label>Damp Proofing or Timber Treatment ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>