force-app/main/default/objects/Property_Valuation__c/fields/Decoration__c.field-meta.xml
<CustomField>
    <fullName>Decoration__c</fullName>
    <label>Decoration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Decoration</valueSetName>
    </valueSet>
</CustomField>