force-app/main/default/objects/Property_Valuation__c/fields/Defect_Description_And_Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Defect_Description_And_Discovery_Date__c</fullName>
    <inlineHelpText>The nature of the defect or damage suffered and the date upon which it
became apparent:</inlineHelpText>
    <label>Defect Description And Discovery Date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>