force-app/main/default/objects/Property_Valuation__c/fields/Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Required__c</fullName>
    <label>Deposit Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>