force-app/main/default/objects/Property_Valuation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>