force-app/main/default/objects/Property_Valuation__c/fields/Disposal__c.field-meta.xml
<CustomField>
    <fullName>Disposal__c</fullName>
    <label>Disposal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disposal</valueSetName>
    </valueSet>
</CustomField>