force-app/main/default/objects/Property_Valuation__c/fields/Do_You_Have_Planning_Consent_For__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Have_Planning_Consent_For__c</fullName>
    <inlineHelpText>Do you have planning consent for:
a) works carried out?
b) works proposed?</inlineHelpText>
    <label>Do You Yave Planning Consent For?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>works carried out?</fullName>
                <label>Works carried out?</label>
            </value>
            <value>
                <fullName>works proposed?</fullName>
                <label>Works proposed?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>