force-app/main/default/objects/Property_Valuation__c/fields/Do_you_have_Secondary_Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_Secondary_Property_Owner__c</fullName>
    <label>Do you have Secondary Property Owner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>