force-app/main/default/objects/Property_Valuation__c/fields/EPC_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EPC_Expiry_Date__c</fullName>
    <label>EPC Expiry Date</label>
    <type>Date</type>
</CustomField>