force-app/main/default/objects/Property_Valuation__c/fields/EPC_Fee__c.field-meta.xml
<CustomField>
    <fullName>EPC_Fee__c</fullName>
    <label>EPC Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>