force-app/main/default/objects/Property_Valuation__c/fields/Est_Monthly_Rental_Value__c.field-meta.xml
<CustomField>
    <fullName>Est_Monthly_Rental_Value__c</fullName>
    <formula>Estimated_Weekly_Rental_Value__c * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Weekly Rental Value is Multiply By Four.</inlineHelpText>
    <label>Est Monthly Rental Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>