force-app/main/default/objects/Property_Valuation__c/fields/Est_Yearly_Rental_Value__c.field-meta.xml
<CustomField>
    <fullName>Est_Yearly_Rental_Value__c</fullName>
    <formula>Est_Monthly_Rental_Value__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Est Monthly Rental Value Value is Multiply By Twelve.</inlineHelpText>
    <label>Est Yearly Rental Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>