force-app/main/default/objects/Property_Valuation__c/fields/Estimated_Weekly_Rental_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Weekly_Rental_Value__c</fullName>
    <label>Estimated Weekly Rental Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>