force-app/main/default/objects/Property_Valuation__c/fields/Expiry_Date_Of_Lease__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Of_Lease__c</fullName>
    <inlineHelpText>Expiry date of lease (eg: 24.06.2080)</inlineHelpText>
    <label>Expiry Date Of Lease</label>
    <type>Date</type>
</CustomField>