force-app/main/default/objects/Property_Valuation__c/fields/Fee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_End_Date__c</fullName>
    <label>Fee End Date</label>
    <type>Date</type>
</CustomField>