force-app/main/default/objects/Property_Valuation__c/fields/Fee_Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Starting_Date__c</fullName>
    <label>Fee Starting Date</label>
    <type>Date</type>
</CustomField>