force-app/main/default/objects/Property_Valuation__c/fields/Fee_to_Sub_Agents__c.field-meta.xml
<CustomField>
    <fullName>Fee_to_Sub_Agents__c</fullName>
    <inlineHelpText>Add Commission Of the Sub Agent</inlineHelpText>
    <label>Fee to Sub Agents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>