force-app/main/default/objects/Property_Valuation__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <inlineHelpText>Please add number of Floor</inlineHelpText>
    <label>Number Of Floor</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>