force-app/main/default/objects/Property_Valuation__c/fields/Furnished__c.field-meta.xml
<CustomField>
    <fullName>Furnished__c</fullName>
    <label>Furnished</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Furnished</valueSetName>
    </valueSet>
</CustomField>