force-app/main/default/objects/Property_Valuation__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <inlineHelpText>Please add number of garage</inlineHelpText>
    <label>Number Of Garage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>