force-app/main/default/objects/Property_Valuation__c/fields/Garden__c.field-meta.xml
<CustomField>
    <fullName>Garden__c</fullName>
    <label>Garden</label>
    <length>30</length>
    <type>Text</type>
</CustomField>