force-app/main/default/objects/Property_Valuation__c/fields/Gross_Yield__c.field-meta.xml
<CustomField>
    <fullName>Gross_Yield__c</fullName>
    <formula>Est_Yearly_Rental_Value__c / Market_Appraisal_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the &quot;Est Yearly Rental Value&quot; by dividing the Market Appraisal Price.</inlineHelpText>
    <label>Gross Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>