force-app/main/default/objects/Property_Valuation__c/fields/Has_building_extension_work_been_carried__c.field-meta.xml
<CustomField>
    <fullName>Has_building_extension_work_been_carried__c</fullName>
    <inlineHelpText>Has any building extension work been carried out?</inlineHelpText>
    <label>Has building extension work been carried</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>