force-app/main/default/objects/Property_Valuation__c/fields/Has_Property_Suffered_From_flooding__c.field-meta.xml
<CustomField>
    <fullName>Has_Property_Suffered_From_flooding__c</fullName>
    <inlineHelpText>Has the property, as far as you are aware, at any time suffered
from flooding, subsidence, rising damp, dry rot, wet rot, woodworm
or other timber infestation, or any structural or drainage defect
requiring remedial treatment?</inlineHelpText>
    <label>Has Property Suffered From Flooding?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>