force-app/main/default/objects/Property_Valuation__c/fields/House_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>House_Building_Name__c</fullName>
    <label>House / Building Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>