force-app/main/default/objects/Property_Valuation__c/fields/Household_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Household_Last_Name__c</fullName>
    <formula>IF(
NOT(ISBLANK( Contact__c )) &amp;&amp; NOT(ISBLANK( Secondary_Property_Owner__c )),
TEXT(Contact__r.Salutation) &amp; &apos; &apos; &amp;  Contact__r.LastName  &amp; &apos; &amp; &apos; &amp;  TEXT( Secondary_Property_Owner__r.Salutation )  &amp; &apos; &apos; &amp;  Secondary_Property_Owner__r.LastName,
IF(
NOT(ISBLANK( Contact__c )) &amp;&amp; ISBLANK( Secondary_Property_Owner__c ),
TEXT(Contact__r.Salutation) &amp; &apos; &apos; &amp;  Contact__r.LastName , 
IF(
ISBLANK( Contact__c ) &amp;&amp;  NOT(ISBLANK( Secondary_Property_Owner__c )) ,
  TEXT(Secondary_Property_Owner__r.Salutation)   &amp; &apos; &apos; &amp;  Secondary_Property_Owner__r.LastName,
NULL
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Last Name</label>
    <type>Text</type>
</CustomField>