force-app/main/default/objects/Property_Valuation__c/fields/If_Leasehold_indicate_unexpired_term__c.field-meta.xml
<CustomField>
    <fullName>If_Leasehold_indicate_unexpired_term__c</fullName>
    <label>If Leasehold, indicate unexpired term</label>
    <length>250</length>
    <type>Text</type>
</CustomField>