force-app/main/default/objects/Property_Valuation__c/fields/If_Status_Is_Instructed__c.field-meta.xml
<CustomField>
    <fullName>If_Status_Is_Instructed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If Status Is Instructed?</label>
    <type>Checkbox</type>
</CustomField>