force-app/main/default/objects/Property_Valuation__c/fields/If_YES_Do_You_Have_A_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>If_YES_Do_You_Have_A_Guarantee__c</fullName>
    <inlineHelpText>Has any damp proofing or timber treatment been carried out?</inlineHelpText>
    <label>If YES, Do You Have a Guarantee?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>