force-app/main/default/objects/Property_Valuation__c/fields/In_Progress_Age__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Age__c</fullName>
    <formula>ABS(ROUND((DATETIMEVALUE(In_Progress_Date_Time__c) - DATETIMEVALUE(Land_Registry_Pending_Date_Time__c)) / (1), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress Age (In Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>