force-app/main/default/objects/Property_Valuation__c/fields/In_Progress_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Date_Time__c</fullName>
    <label>In Progress Date Time</label>
    <type>DateTime</type>
</CustomField>