force-app/main/default/objects/Property_Valuation__c/fields/Instructed__c.field-meta.xml
<CustomField>
    <fullName>Instructed__c</fullName>
    <formula>IF( ISPICKVAL(Status__c , &apos;Instructed&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructed?</label>
    <type>Checkbox</type>
</CustomField>