force-app/main/default/objects/Property_Valuation__c/fields/Instructed_Age__c.field-meta.xml
<CustomField>
    <fullName>Instructed_Age__c</fullName>
    <formula>ABS(ROUND((DATETIMEVALUE( Instructed_Date_Time__c ) - DATETIMEVALUE(Not_Instructed__c)) / (1), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructed Age (In Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>