force-app/main/default/objects/Property_Valuation__c/fields/Instructed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Instructed_Date_Time__c</fullName>
    <label>Instructed Date Time</label>
    <type>DateTime</type>
</CustomField>