force-app/main/default/objects/Property_Valuation__c/fields/Instructing_Age__c.field-meta.xml
<CustomField>
    <fullName>Instructing_Age__c</fullName>
    <formula>ABS(ROUND((DATETIMEVALUE(Instructing_Date_Time__c) - DATETIMEVALUE(MA_Scheduled_Date_Time__c)) / (1), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructing Age (In Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>