force-app/main/default/objects/Property_Valuation__c/fields/Instructing_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Instructing_Date_Time__c</fullName>
    <label>Instructing Date Time</label>
    <type>DateTime</type>
</CustomField>