force-app/main/default/objects/Property_Valuation__c/fields/Is_Insurance_Included_in_Charges__c.field-meta.xml
<CustomField>
    <fullName>Is_Insurance_Included_in_Charges__c</fullName>
    <inlineHelpText>Is insurance included in these charges?</inlineHelpText>
    <label>Is Insurance Included in Charges?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>