force-app/main/default/objects/Property_Valuation__c/fields/Is_Tenancy_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Is_Tenancy_Ongoing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tenancy Ongoing</label>
    <type>Checkbox</type>
</CustomField>