force-app/main/default/objects/Property_Valuation__c/fields/Joint_Agent__c.field-meta.xml
<CustomField>
    <fullName>Joint_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Valuations (Joint Agent)</relationshipLabel>
    <relationshipName>Property_Valuations1</relationshipName>
    <type>Lookup</type>
</CustomField>