force-app/main/default/objects/Property_Valuation__c/fields/Key_Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Key_Target_Audience__c</fullName>
    <label>Key Target Audience</label>
    <type>TextArea</type>
</CustomField>