force-app/main/default/objects/Property_Valuation__c/fields/Key_USP_s__c.field-meta.xml
<CustomField>
    <fullName>Key_USP_s__c</fullName>
    <label>Key USP&apos;s</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>