force-app/main/default/objects/Property_Valuation__c/fields/Keys__c.field-meta.xml
<CustomField>
    <fullName>Keys__c</fullName>
    <label>Keys</label>
    <type>TextArea</type>
</CustomField>