force-app/main/default/objects/Property_Valuation__c/fields/Kitchen_Description__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Description__c</fullName>
    <label>Kitchen Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>