force-app/main/default/objects/Property_Valuation__c/fields/Land_Registry__c.field-meta.xml
<CustomField>
    <fullName>Land_Registry__c</fullName>
    <label>Land Registry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>